# system-programming

task1/: Cargo.toml
task1/src/: main.rs
task2/: Cargo.toml
task2/src/: main.rs
task3/: Cargo.toml
task3/src/: main.rs
task4/: Cargo.toml
task4/src/: main.rs
task5/: Cargo.toml  test_file.txt
task5/src/: main.rs
task6/: Cargo.toml
task6/src/: main.rs
task7/: Cargo.toml  build.rs
task7/src/: main.rs
