[package]
name = "task1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",   
    "Win32_UI_Shell",
    "Win32_UI_Controls_Dialogs",
    "Win32_Graphics_Dwm"
]

[build-dependencies]
embed-manifest = "1.3.1"
